--- a/.travis.yml
+++ b/.travis.yml
@@ -2,23 +2,36 @@ language: c
 sudo: false
 
 # Blacklist
-branches:
-  except:
-    - gh-pages
+#branches:
+#  except:
+#    - gh-pages
 
 env:
   global:
      - PRETTYNAME="DLog"
 
 before_install:
-   - source <(curl -SLs https://raw.githubusercontent.com/adafruit/travis-ci-arduino/master/install.sh)
+  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_1.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :1 -ac -screen 0 1280x1024x16"
+  - sleep 3
+  - export DISPLAY=:1.0
+  - wget http://downloads.arduino.cc/arduino-1.8.5-linux64.tar.xz
+  - tar xf arduino-1.8.5-linux64.tar.xz
+  - sudo mv arduino-1.8.5 /usr/local/share/arduino
+  - sudo ln -s /usr/local/share/arduino/arduino /usr/local/bin/arduino
 
 install:
-   - arduino --install-library "ArduinoSTL"
+  - ln -s $PWD /usr/local/share/arduino/libraries/DLog
+  - arduino --pref "boardsmanager.additional.urls=http://arduino.esp8266.com/stable/package_esp8266com_index.json" --save-prefs
+  - arduino --install-boards esp8266:esp8266
+  - arduino --pref "compiler.warning_level=all" --save-prefs
 
 script:
-   - build_main_platforms
+  - "echo $PWD"
+  - "echo $HOME"
+  - "ls $PWD"
+  - source $TRAVIS_BUILD_DIR/travis/common.sh
+  - arduino --board esp8266:esp8266:generic --save-prefs
+  - build_examples
 
-# Generate and deploy documentation
 after_success:
-  - source <(curl -SLs  https://raw.githubusercontent.com/adafruit/travis-ci-arduino/master/library_check.sh)
+  - bash <(curl -s https://codecov.io/bash)
