--- a/.travis.yml
+++ b/.travis.yml
@@ -21,17 +21,25 @@ before_install:
 
 install:
   - ln -s $PWD /usr/local/share/arduino/libraries/DLog
+  - arduino --pref "compiler.warning_level=all" --save-prefs
+# install esp8266
   - arduino --pref "boardsmanager.additional.urls=http://arduino.esp8266.com/stable/package_esp8266com_index.json" --save-prefs
   - arduino --install-boards esp8266:esp8266
-  - arduino --pref "compiler.warning_level=all" --save-prefs
+# install esp32
+  - mkdir -p ~/Arduino/hardware/espressif
+  - cd ~/Arduino/hardware/espressif
+  - git clone https://github.com/espressif/arduino-esp32.git esp32
+  - cd esp32
+  - git submodule update --init --recursive
+  - cd tools
+  - python2 get.py
 
 script:
   - "echo $PWD"
   - "echo $HOME"
   - "ls $PWD"
   - source $TRAVIS_BUILD_DIR/travis/common.sh
-  - arduino --board esp8266:esp8266:generic:CpuFrequency=80,CrystalFreq=26,FlashFreq=40,FlashMode=qio,FlashSize=4M1M,led=2,LwIPVariant=v2mss536,Debug=Serial,DebugLevel=CORE --save-prefs
   - build_examples
 
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+#after_success:
+#  - bash <(curl -s https://codecov.io/bash)
