--- a/.travis.yml
+++ b/.travis.yml
@@ -35,16 +35,19 @@ install:
   - cd tools
   - python2 get.py
   - popd
-  
+# install nRF5 boards for micro::bit
+  - arduino --pref "boardsmanager.additional.urls=https://sandeepmistry.github.io/arduino-nRF5/package_nRF5_boards_index.json" --save-prefs
+  -  arduino --install-boards 
 script:
   - "echo $PWD"
   - "echo $HOME"
   - "ls $PWD"
   - source $TRAVIS_BUILD_DIR/travis/common.sh
+  - arduino --board arduino:avr:uno
+  - build_examples
   - arduino --board esp8266:esp8266:generic:CpuFrequency=80,CrystalFreq=26,FlashFreq=40,FlashMode=qio,FlashSize=4M1M,led=2,LwIPVariant=v2mss536,Debug=Serial,DebugLevel=CORE --save-prefs
   - build_examples
   - arduino --board espressif:esp32:esp32:FlashMode=qio,FlashFreq=80,FlashSize=4M,DebugLevel=info --save-prefs
   - build_examples
-
-#after_success:
-#  - bash <(curl -s https://codecov.io/bash)
+  - arduino --board sandeepmistry:nRF5:BBCmicrobit --save-prefs
+  - build_examples
