--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,9 @@ before_install:
 install:
   - ln -s $PWD /usr/local/share/arduino/libraries/DLog
   - arduino --pref "compiler.warning_level=all" --save-prefs
+# add extra board urls
+  - arduino --pref "boardsmanager.additional.urls=http://arduino.esp8266.com/stable/package_esp8266com_index.json,https://sandeepmistry.github.io/arduino-nRF5/package_nRF5_boards_index.json" --save-prefs
 # install esp8266
-  - arduino --pref "boardsmanager.additional.urls=http://arduino.esp8266.com/stable/package_esp8266com_index.json" --save-prefs
   - arduino --install-boards esp8266:esp8266
 # install esp32
   - pushd .
@@ -36,7 +37,6 @@ install:
   - python2 get.py
   - popd
 # install nRF5 boards for micro::bit
-  - arduino --pref "boardsmanager.additional.urls=https://sandeepmistry.github.io/arduino-nRF5/package_nRF5_boards_index.json" --save-prefs
   -  arduino --install-boards sandeepmistry:nRF5
 
 script:
