--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,10 @@ before_install:
   - tar xf arduino-1.8.5-linux64.tar.xz
   - sudo mv arduino-1.8.5 /usr/local/share/arduino
   - sudo ln -s /usr/local/share/arduino/arduino /usr/local/bin/arduino
+# need these for nRF5 (micro::bit)
+  - sudo dpkg --add-architecture i386
+  - sudo apt-get update
+  - sudo apt-get -y install libc6:i386 libstdc++6:i386 libncurses5:i386 libudev1:i386
 
 install:
   - ln -s $PWD /usr/local/share/arduino/libraries/DLog
