--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,17 @@ before_install:
   - tar xf arduino-1.8.5-linux64.tar.xz
   - sudo mv arduino-1.8.5 /usr/local/share/arduino
   - sudo ln -s /usr/local/share/arduino/arduino /usr/local/bin/arduino
+# need these for nRF5 (micro::bit)
+  - sudo dpkg --add-architecture i386
+  - sudo apt-get update
+  - sudo apt-get -y install libc6:i386 libstdc++6:i386 libncurses5:i386 libudev1:i386
 
 install:
   - ln -s $PWD /usr/local/share/arduino/libraries/DLog
   - arduino --pref "compiler.warning_level=all" --save-prefs
+# add extra board urls
+  - arduino --pref "boardsmanager.additional.urls=http://arduino.esp8266.com/stable/package_esp8266com_index.json,https://sandeepmistry.github.io/arduino-nRF5/package_nRF5_boards_index.json" --save-prefs
 # install esp8266
-  - arduino --pref "boardsmanager.additional.urls=http://arduino.esp8266.com/stable/package_esp8266com_index.json" --save-prefs
   - arduino --install-boards esp8266:esp8266
 # install esp32
   - pushd .
@@ -36,7 +41,6 @@ install:
   - python2 get.py
   - popd
 # install nRF5 boards for micro::bit
-  - arduino --pref "boardsmanager.additional.urls=https://sandeepmistry.github.io/arduino-nRF5/package_nRF5_boards_index.json" --save-prefs
   -  arduino --install-boards sandeepmistry:nRF5
 
 script:
@@ -50,5 +54,5 @@ script:
   - build_examples
   - arduino --board espressif:esp32:esp32:FlashMode=qio,FlashFreq=80,FlashSize=4M,DebugLevel=info --save-prefs
   - build_examples
-#  - arduino --board sandeepmistry:nRF5:BBCmicrobit --save-prefs
-#  - build_examples
+  - arduino --board sandeepmistry:nRF5:BBCmicrobit --save-prefs
+  - build_examples
