--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_install:
   - set_application_folder "$APPLICATION_FOLDER"
   - set_sketchbook_folder "$SKETCHBOOK_FOLDER"
 
-  - install_ide "latest"
+  - install_ide "1.8.5"
 
   - install_package "arduino:avr"
   - install_package esp8266:esp8266 "http://arduino.esp8266.com/stable/package_esp8266com_index.json"
@@ -54,4 +54,4 @@ before_install:
 
 script:
   - echo "starting tests"
-  - build_sketch "${SKETCHBOOK_FOLDER}/libraries/MouseTo/examples" "esp8266:esp8266:generic:CpuFrequency=80,CrystalFreq=26,FlashFreq=40,FlashMode=qio,FlashSize=4M1M,led=2,LwIPVariant=v2mss536,Debug=Serial,DebugLevel=CORE" "false" "newest"
+  - build_sketch "${SKETCHBOOK_FOLDER}/libraries/MouseTo/examples" "esp8266:esp8266:generic:CpuFrequency=80,CrystalFreq=26,FlashFreq=40,FlashMode=qio,FlashSize=4M1M,led=2,LwIPVariant=v2mss536,Debug=Serial,DebugLevel=CORE" "false" "1.8.5"
