--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 
   # Uncomment the following lines to get verbose output for debugging
   # 0 (minimum/default) - 2 (maximum) verbosity
-  - set_script_verbosity 1
+  #- set_script_verbosity 1
   # Turn on verbose output during compilation
   #- set_verbose_output_during_compilation "true"
 
@@ -54,4 +54,4 @@ before_install:
 
 script:
   - echo "starting tests"
-  - build_sketch "${SKETCHBOOK_FOLDER}/libraries/MouseTo/examples" "esp8266:esp8266:generic:CpuFrequency=80,CrystalFreq=26,FlashFreq=40,FlashMode=qio,FlashSize=4M1M,led=2,LwIPVariant=v2mss536,Debug=Serial,DebugLevel=CORE" "false" "1.8.5"
+  - build_sketch "${SKETCHBOOK_FOLDER}/libraries/DLog/examples" "esp8266:esp8266:generic:CpuFrequency=80,CrystalFreq=26,FlashFreq=40,FlashMode=qio,FlashSize=4M1M,led=2,LwIPVariant=v2mss536,Debug=Serial,DebugLevel=CORE" "false" "1.8.5"
